--- a/app/mast_toolkit/templates/mast/response/create.html
+++ b/app/mast_toolkit/templates/mast/response/create.html
@@ -1,6 +1,6 @@
 {% extends "mast/response/base.html" %}
 
-{% block title %}Create survey{% endblock %}
+{% block title %}Complete MAST Maturity survey - {{ survey.title }}{% endblock %}
 
 {% block content %}
 <h1>MAST Data Documentation Maturity Assessment</h1>
