--- a/app/mast_toolkit/templates/mast/dashboard/update.html
+++ b/app/mast_toolkit/templates/mast/dashboard/update.html
@@ -64,7 +64,7 @@
                         <label class="col-2" for="team_modal_name">Team name:</label>
                         <div class="col-5">
                             <div>
-                            <input name="name" class="form-control" id="team_modal_name" value="" placeholder="sdfdsf"></input>
+                            <input name="name" class="form-control" id="team_modal_name" value="" placeholder="Enter team name"></input>
                             <p class="form-text text-muted">
                                 {{form.name.help_text}}
                             </p>
