--- a/app/mast_toolkit/templates/mast/response/create.html
+++ b/app/mast_toolkit/templates/mast/response/create.html
@@ -43,13 +43,13 @@
     </h2>
     <div class="container mt-5 likert-table">
         <div class="row likert-headers">
-            <div class="col-5"></div>
-            <div class="col">Strongly Disagree</div>
-            <div class="col">Disagree</div>
-            <div class="col">Neither Agree nor Disagree</div>
-            <div class="col">Agree</div>
-            <div class="col">Strongly Agree</div>
-            <div class="col">Don't Know</div>
+            <div class="col-6"></div>
+            <div class="col-1">Strongly Disagree</div>
+            <div class="col-1">Disagree</div>
+            <div class="col-1">Neither Agree nor Disagree</div>
+            <div class="col-1">Agree</div>
+            <div class="col-1">Strongly Agree</div>
+            <div class="col-1">Don't Know</div>
         </div>
         {% include "mast/response/helpers/likert.html" with field=form.beliefs_metadata_1 %}
         {% include "mast/response/helpers/likert.html" with field=form.beliefs_analysis_1 %}
