--- a/app/mast_toolkit/templates/mast/response/base.html
+++ b/app/mast_toolkit/templates/mast/response/base.html
@@ -1,1 +1,8 @@
 {% extends "base.html" %}
+{% block styles %}
+@media (min-width: 576px) {
+    .container, .container-sm {
+        max-width: unset !important;
+    }
+}
+{% endblock %}
