--- a/app/mast_toolkit/templates/mast/dashboard/report.html
+++ b/app/mast_toolkit/templates/mast/dashboard/report.html
@@ -727,8 +727,8 @@
 </p>
 <h3 class="h5">Handing 'Don't know' responses</h5>
 <p>
-    When assessing the 'beliefs', to provide aggregated responses, we recode all "don't know" responses to the mid point (3) of a 5-point likert scale.
-    This represents that respondents who are "unaware" data governance programs have a less negative perception of data that those who actively disagree with these belief statements.
+    When assessing the 'beliefs', to provide aggregated responses, we recode all "don't know" responses to the lower-range (1.5) of a 5-point likert scale.
+    This represents that respondents who are "unaware" data governance programs have a less negative perception of data that those who strongly disagree with these belief statements, but a lack of awareness should be recognised as a less positive impact than users who are aware but dissatisfied with governance programs.
 </p>
 <h3 class="h5 print-hide">Downloading your report</h5>
 <p class="print-hide">
