Correct help text

--- a/app/mast_toolkit/templates/mast/dashboard/report.html
+++ b/app/mast_toolkit/templates/mast/dashboard/report.html
@@ -562,7 +562,7 @@
 <h2 class="page-break-before" id="teams">Results by Team</h2>
 {% if team_data %}
     <p>Below is a breakdown of all teams who have provided data, along with their scores across the MAST/IDEAL dimensions.</p>
-    <p>Teams with metrics <span class="text-danger">below 2 are marked in red</span>, those <span class="text-warning">between 2-3 are marked in yellow</span>
+    <p>Teams with metrics <span class="text-danger">below 2 are marked in red</span>, those <span class="text-warning">between 2 and 3 are marked in yellow</span>
         and those with <span class="text-success">scores greater than 4 are marked in green</span>.</p>
     <table class="table">
         <thead>
