--- a/app/mast_toolkit/templates/mast/response/create.html
+++ b/app/mast_toolkit/templates/mast/response/create.html
@@ -86,7 +86,7 @@
 
 
     <div class="h4 border-top border-info pt-3 mt-1">
-        The following questions are related to the types of of information that are collected about data assets in your organisation. 
+        The following questions are related to the types of information that are collected about data assets in your organisation. 
     </div>
     <div class="pb-3">
         The <b>D</b> in the IDEAL framework stands for 'Document data and metadata'  which improves the understanding of how data is collected and processed. These questions are about the types of information you and your team collect in your data documentation.
